implemented signup form for workshop working

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -585,10 +585,10 @@
           <!-- Signup Form -->
           <form id="signupForm" class="signup-form" action="/signup" method="post">
             <label for="name">Name:</label>
-            <input type="text" id="name" name="n1" required>
+            <input type="text" id="name" name="userName" required>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="emailid" required>
 
             <button type="submit" class="btn btn-primary">
               <span class="text text-1">Sign Up</span>
@@ -1028,9 +1028,6 @@
         <button class="slider-btn next" aria-label="slide to next" testi-data-next-btn style="right: 5% ;">
           <ion-icon name="chevron-forward"></ion-icon>
         </button>
-
-
-
       </section>
 
 
