--- a/views/testimonialsection/testimonials.ejs
+++ b/views/testimonialsection/testimonials.ejs
@@ -13,7 +13,7 @@
         rel="stylesheet">
 
 
-    <!-- <style>
+    <style>
         body {
             font-family: "DM Sans", sans-serif;
             line-height: 1.6;
@@ -201,9 +201,9 @@
         ::-webkit-scrollbar-track {
             background-color: transparent;
         }
-    </style> -->
+    </style>
 
-    <link rel="stylesheet" href="../../public/show.css">
+
 </head>
 
 <body style="overflow: auto;">
