updated minor bug in specialities section

--- a/views/homepage/index.ejs
+++ b/views/homepage/index.ejs
@@ -761,7 +761,7 @@
                       <% index=index + 1%>
                         <% } %>
                           <% if(index> 1) { %>
-                            <img src="https://ik.imagekit.io/vaibhav11/shape-4.png?updatedAt=1707734962365" width="179"
+                            <img src="https://ik.imagekit.io/vaibhav11/Koe_Cafe/Additional/shape-4.png?updatedAt=1720483080805" width="179"
                               height="359" loading="lazy" alt="" class="shape shape-1">
 
                             <% } %>
